RESOLVED FIXED319186
AudioParamTimeline::cancelAndHoldAtTime discards exception from second insertEvent
https://bugs.webkit.org/show_bug.cgi?id=319186
Summary AudioParamTimeline::cancelAndHoldAtTime discards exception from second insert...
Ahmad Saleem
Reported 2026-07-12 02:55:07 PDT
ssia
Attachments
Radar WebKit Bug Importer
Comment 1 2026-07-12 02:55:14 PDT
Ahmad Saleem
Comment 2 2026-07-12 02:56:04 PDT
EWS
Comment 3 2026-07-12 23:41:50 PDT
Committed 317019@main (050117b8ea11): <https://commits.webkit.org/317019@main> Reviewed commits have been landed. Closing PR #69198 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.