AudioParamTimeline::cancelAndHoldAtTime discards exception from second insertEvent https://bugs.webkit.org/show_bug.cgi?id=319186 rdar://182035131

Reviewed by Chris Dumez.

When cancelAndHoldAtTime() splits a SetValueCurve, it inserts a
replacement curve event and then a trailing SetValue event. The second
insertEvent() call ignored its own result and re-checked the already-
validated result from the first insert, so any exception from the
second insert would be silently swallowed.

Capture and check the second insert's own result.

No new tests: the trailing SetValue lands exactly at the truncated
curve's end (a non-overlap) with all later events already removed, so
the second insert cannot throw today. This is a latent correctness fix,
not a web-observable bug.

* Source/WebCore/Modules/webaudio/AudioParamTimeline.cpp:
(WebCore::AudioParamTimeline::cancelAndHoldAtTime):

Canonical link: https://commits.webkit.org/317019@main