Source/WebCore/Modules/webaudio/AudioParamTimeline.cpp
@@ -1,6 +1,6 @@
 /*
  * Copyright (C) 2011 Google Inc. All rights reserved.
- * Copyright (C) 2022-2024 Apple Inc. All rights reserved.
+ * Copyright (C) 2022-2026 Apple Inc. All rights reserved.
  *
  * Redistribution and use in source and binary forms, with or without
  * modification, are permitted provided that the following conditions
@@ -314,9 +314,9 @@ ExceptionOr<void> AudioParamTimeline::cancelAndHoldAtTime(Seconds cancelTime)
         if (result.hasException())
             return result.releaseException();
         if (newSetValueEvent) {
-            insertEvent(WTF::move(*newSetValueEvent));
-            if (result.hasException())
-                return result.releaseException();
+            auto setValueResult = insertEvent(WTF::move(*newSetValueEvent));
+            if (setValueResult.hasException())
+                return setValueResult.releaseException();
         }
     }
 
